# pseudoroot

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bench/: Makefile  benchmark.sh  compare_all.sh  compare_fakeroost.sh  compare_maps.sh  comprehensive_benchmark.sh  daemon_benchmark.sh  install.mk  make_benchmark.sh  run-install.sh  run-make.sh  run.sh  test_papaya.sh
bench/stat-loop/: Cargo.toml
bench/stat-loop/src/: main.rs
bench/test-package/: Makefile
crates/pseudoroot-core/: Cargo.toml
crates/pseudoroot-core/src/: daemon_client.rs  lib.rs  protocol.rs  state.rs
crates/pseudoroot-daemon/: Cargo.toml
crates/pseudoroot-daemon/src/: main.rs
crates/pseudoroot-lib/: Cargo.toml
crates/pseudoroot-lib/src/: lib.rs
crates/pseudoroot-lib/src/platform/: linux.rs  macos.rs  mod.rs
crates/pseudoroot-tests/: Cargo.toml
crates/pseudoroot-tests/src/: lib.rs
crates/pseudoroot-tests/tests/: integration.rs  interposition.rs
docs/: architecture.md  benchmarks.md
docs/benchmark-results/: 2026-07-01.md  2026-07-02-unslop.md  2026-07-02.md
pseudoroot/: Cargo.toml  build.rs
pseudoroot-core/: Cargo.toml
pseudoroot-core/src/: daemon_client.rs  daemon_server.rs  lib.rs  protocol.rs  shm_client.rs  shm_map.rs  state.rs
pseudoroot-daemon/: Cargo.toml
pseudoroot-daemon/src/: main.rs
pseudoroot-lib/: Cargo.toml  build.rs  pseudoroot.lds
pseudoroot-lib/src/: inode.rs  lib.rs  ownership.rs
pseudoroot-lib/src/platform/: linux.rs  macos.rs
pseudoroot-tests/: Cargo.toml
pseudoroot-tests/src/: lib.rs
pseudoroot-tests/tests/: api.rs  cli.rs  integration.rs  interposition.rs
pseudoroot/interpose/: pseudoroot.lds
pseudoroot/interpose/src/: inode.rs  lib.rs
pseudoroot/interpose/src/platform/: mod.rs
pseudoroot/src/: lib.rs
todo/: macos.md
