[workspace]
members = [
    "pseudoroot-core",
    "pseudoroot-lib",
    "pseudoroot-daemon",
    "pseudoroot",
    "pseudoroot-tests",
    "bench/stat-loop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
repository = "https://github.com/lu-zero/pseudoroot"

[workspace.dependencies]
pseudoroot-core = { version = "0.1.0", path = "pseudoroot-core" }