[workspace]
members = [
    "pseudoroot-core",
    "pseudoroot-lib",
    "pseudoroot-daemon",
    "pseudoroot",
    "pseudoroot-tests",
    "bench/stat-loop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
repository = "https://github.com/lu-zero/pseudoroot"
homepage = "https://github.com/lu-zero/pseudoroot"
readme = "README.md"
keywords = ["fakeroot", "ld-preload", "interposition", "root", "syscall"]
categories = ["command-line-utilities", "development-tools::build-utils", "os"]

[workspace.dependencies]
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
ctor = "0.2"
ctrlc = "3.4"
dashmap = "5.5"
libc = "0.2"
pseudoroot = { version = "0.1.0", path = "pseudoroot" }
pseudoroot-core = { version = "0.1.0", path = "pseudoroot-core" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"