[package]
name = "pseudoroot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.5"  # Concurrent HashMap for better performance
