[package]
name = "pseudoroot-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pseudoroot-daemon"
path = "src/main.rs"

[[bin]]
name = "pdrd"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ctrlc.workspace = true
pseudoroot-core.workspace = true