[package]
name = "pseudoroot-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone pseudoroot daemon (pdrd): optional persistent fake-root state server over a Unix socket"
documentation = "https://docs.rs/pseudoroot-daemon"

[[bin]]
name = "pdrd"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ctrlc.workspace = true
pseudoroot-core.workspace = true