[package]
name = "pseudoroot-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
pseudoroot.workspace = true
pseudoroot-core.workspace = true
libc.workspace = true
tempfile.workspace = true