[package]
name = "pseudoroot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "pseudoroot"
path = "src/lib.rs"

[[bin]]
name = "pseudoroot"
path = "src/bin/pseudoroot.rs"

[[bin]]
name = "pdr"
path = "src/bin/pseudoroot.rs"

[dependencies]
clap.workspace = true
ctor.workspace = true
libc.workspace = true
pseudoroot-core.workspace = true
tempfile.workspace = true