[package]
name = "pseudoroot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "pseudoroot"
path = "src/lib.rs"

[[bin]]
name = "pdr"
path = "src/bin/pdr.rs"

[dependencies]
clap.workspace = true
ctor.workspace = true
ctrlc.workspace = true
libc.workspace = true
pseudoroot-core.workspace = true
tempfile.workspace = true