[package]
name = "pseudoroot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Rust fakeroot via library interposition (LD_PRELOAD / DYLD_INSERT_LIBRARIES): run commands as if root, no real root access needed"
documentation = "https://docs.rs/pseudoroot"

[lib]
name = "pseudoroot"
path = "src/lib.rs"

[[bin]]
name = "pdr"
path = "src/bin/pdr.rs"

[dependencies]
clap.workspace = true
ctor.workspace = true
ctrlc.workspace = true
libc.workspace = true
pseudoroot-core.workspace = true
tempfile.workspace = true