[package]
name = "pseudoroot-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pseudoroot-core.workspace = true
ctor = "0.2"
rustix = { version = "0.38", features = ["fs", "process", "system"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies if needed

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies if needed
